# android_notify

./: .gitignore  .pylintrc  CONTRIBUTION.md  Pydroid-3.py  README.md  pyproject.toml  requirements.txt  setup.py  test.py  todo.md  todos.txt  upload_pypi.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  pylint.yml
android_notify/: README.md  __init__.py  __init__.txt  __main__.py  _dev.txt  advanced_dev.py  an_types.py  an_utils.py  base.py  config.py  core.py  facade.py  lab.py  styles.py  sword.py  sword.txt
android_notify/internal/: android.py  channels.py  facade.py  helper.py  intents.py  java_classes.py  logger.py  permissions.py
android_notify/media/music/: __init__.py  helper.py
android_notify/res/: README.md
android_notify/res/layout/: an_colored_basic_large.xml  an_colored_basic_small.xml
android_notify/res/layout/dev/: an_colored_and_large_icon_right.xml  custom_colored_onepart_title.xml  custom_colored_title.xml
android_notify/tests/: android_notify_test.py  app.py  base_test.py  buildozer.spec  main.py  test_basic_notifications.py  test_notification_actions.py  test_notification_appearance.py  test_notification_behavior.py  test_notification_channels.py  test_notification_sound.py
android_notify/tests/flet/basic/src/: core.py
android_notify/tests/flet/flet-working/: README.md  build.gradle  pyproject.toml
android_notify/tests/src/: CarouselReceiver.txt
android_notify/widgets/: images.py  texts.py
docs/: main.py  main.txt
docs/examples/flet-working/: README.md  build.gradle  proguard-rules.pro
docs/examples/flet-working/src/: core.py  main.py
docs/old-website/: README.md  vercel.json
docs/old-website/public/: last-updated.txt
docs/website/: README.md  generate-last-updated.cjs  index.html  package-lock.json  package.json  vite.config.ts
docs/website/public/: last-updated.txt
docs/website/src/: App.tsx  CodeBlock.tsx  ScrollAssist.tsx  main.tsx
docs/website/src/app/: VersionContext.tsx  layout.tsx  page.tsx
docs/website/src/app/advanced-methods/: page.tsx
docs/website/src/app/components/: page.tsx
docs/website/src/app/extras/: page.tsx
docs/website/src/app/getting-started/: page.tsx
docs/website/src/app/reference/: page.tsx
docs/website/src/app/versions/: page.tsx
docs/website/src/assets/css/: advmethodspage.css  app.css  componentspage.css  home-page.css  mainpage.css  (+3 more)
docs/website/src/pages/: AdvanceMethodsPage.tsx  AdvancedMethodsPage.tsx  ComponentsPage.tsx  ExtrasPage.tsx  HomePage.tsx  MainPage.tsx  ReferencePage.tsx  VersionsPage.tsx
docs/website/src/ui/: ScrollAssist.tsx
docs/website/src/versions-data/: 1.58.tsx  1.59.tsx  general.ts  index.ts  mainpage.ts
very rough/: main.txt  styles.txt
very-rough/: __init__.txt  core.txt  sword.txt
(+21 files in other folders)
